* Thu Aug 11 2011 Thunor <thunorsif@hotmail.com>
- New widget: <timer> with a custom "tick" signal.

* Wed Aug 10 2011 Thunor <thunorsif@hotmail.com>
- Connected-up the primary and secondary icon-press/release signals for
  the new spinbutton widget -- it's effectively an entry widget + scale,
  therefore all the GtkEntry properties apply too.
- Connected-up the changed signal for the new spinbutton widget.

* Tue Aug 9 2011 Thunor <thunorsif@hotmail.com>
- Modified token_store_with_argument_attr to convert signal names passed
  in from the XML separated with underscores to hyphenated strings
  (GTK+ doesn't distinguish between the two, so now we don't).
- New widget: <spinbutton>.
- Added default messages for unimplemented directives for widgets that
  I've so far refactored or recently added.

* Mon Aug 8 2011 Thunor <thunorsif@hotmail.com>
- Fixed an existing bug in try_set_property, the function that passes
  the tag attributes that are GTK+ widget properties to GTK+ to be set.
  The part that should have been converting a char to a guint was
  converting a char to a [UTF8] char which resulted in all guint GTK+
  widget properties being bugged; therefore "border_width" now works.
- Deprecated the "margin" custom tag attribute and removed from docs.
- Started to implement the spinbutton widget.

* Sun Aug 7 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug I added to the pixmap widget that caused a segfault.
- Updated the menuitem widget to support custom tag attributes of
  "stock[-id]", "icon[-name]" and "image-name" plus underscores. This
  is consistent with the extended names accepted by the tree widget.
- Updated the menuitem widget to support using the height or width
  directives to override the default theme icon size of 16.

* Sat Aug 6 2011 Thunor <thunorsif@hotmail.com>
- Added theme icon support to the pixmap widget: the height or width
  directives can be used to specify the "size" else it defaults to 32.
- Tweaked the new widget template somewhat.